# franka_emulator

./: .gitignore  CMakeLists.txt  Doxyfile  FrankaEmulatorConfig.cmake.in  README.md
example/: example.cpp  selftest.cpp
include/franka/: command_types.h  control_tools.h  control_types.h  exception.h  gripper.h  gripper_state.h  log.h  model.h  robot.h  robot_state.h  vacuum_gripper.h  vacuum_gripper_state.h
include/franka/emulator/: plugin.h  shared.h
include/franka_emulator/: command_types.h  control_tools.h  control_types.h  duration.h  errors.h  exception.h  gripper.h  gripper_state.h  log.h  lowpass_filter.h  model.h  rate_limiting.h  robot.h  robot_state.h  vacuum_gripper.h  vacuum_gripper_state.h
include/franka_emulator/emulator/: constants.h  gripper_protocol.h  network.h  plugin.h  robot_protocol.h  semaphore.h  shared.h  thread.h
model/: franka.sdf  franka.urdf  franka_emulator.world  model.config
model/franka_emulator/: model.config  model.urdf
source/: control_tools.cpp  control_types.cpp  duration.cpp  errors.cpp  exception.cpp  franka_emulator.cpp  franka_emulator.sh  gripper.cpp  gripper_state.cpp  install_rt.sh  log.cpp  lowpass_filter.cpp  model.cpp  plugin.cpp  rate_limiting.cpp  robot.cpp  robot_state.cpp  vacuum_gripper.cpp  vacuum_gripper_state.cpp
source/emulator/: calibrator.cpp  franka_emulator.sh  friction_calibrator.cpp  inertia_calibrator.cpp  library_calibrator.cpp  plugin.cpp  semaphore.cpp  shared.cpp  thread.cpp
